# rag-anything-test

./: .gitignore  README.md  debug_fountain_elements.py  demo.py  extract_fountain_objects.py  fix_fountain_format.py  fountain_objects.json  lightrag_lotr.py  output_chunks.py  process_folder.py  pyproject.toml  raganything_example.py  raganything_example_fixed.py  simple_rag.py  test_character_name.py  test_document.md  test_improved_conversion.py  test_mineru.py  test_multi_doc.py  test_search.py  test_simple_fountain.py
